# rusty-risc

./: Cargo.toml  README.md  run_tests.sh
.github/workflows/: ci.yml
baremetal/: .gitignore  Makefile  gdb.init  link.ld
baremetal/src/: main.c
src/: bus.rs  cpu.rs  exceptions.rs  main.rs  trap.rs
src/bus/: clint.rs  ram.rs  uart.rs
src/cpu/: alu.rs  csr.rs  decoder.rs  instructions.rs  regfile.rs
tests/: rv32mi-p-csr  rv32mi-p-shamt  rv32ua-p-amoadd_w  rv32ua-p-amoand_w  rv32ua-p-amomax_w  rv32ua-p-amomaxu_w  rv32ua-p-amomin_w  rv32ua-p-amominu_w  rv32ua-p-amoor_w  rv32ua-p-amoswap_w  rv32ua-p-amoxor_w  rv32ua-p-lrsc  rv32ui-p-add  rv32ui-p-addi  rv32ui-p-and  rv32ui-p-andi  rv32ui-p-auipc  rv32ui-p-beq  rv32ui-p-bge  rv32ui-p-bgeu  rv32ui-p-blt  rv32ui-p-bltu  rv32ui-p-bne  rv32ui-p-fence_i  rv32ui-p-jal  rv32ui-p-jalr  rv32ui-p-lb  rv32ui-p-lbu  rv32ui-p-ld_st  rv32ui-p-lh  rv32ui-p-lhu  rv32ui-p-lui  rv32ui-p-lw  rv32ui-p-or  rv32ui-p-ori  rv32ui-p-sb  rv32ui-p-sh  rv32ui-p-simple  rv32ui-p-sll  rv32ui-p-slli  (+21 more)
