[package]
name = "riscv_emu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-primitive-derive = "^0.1"
num-traits = "^0.1"
num-integer = "^0.1"
clap = { version = "4.5.23", features = ["derive"] }
iter-enum = "1.2.0"
goblin = "0.10.0"
